# Stream-Reliability-Lab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLEANUP_GOAL.txt  DECISIONS.md  Dockerfile  MANIFEST.txt  Makefile  PLAN.md  PROGRESS.md  README.md  SPEC.md  START_GOAL.txt  START_HERE.md  compose.yaml  pyproject.toml
.codex/agents/: reliability-architect.toml  simplicity-critic.toml  skeptical-reviewer.toml  test-engineer.toml
.github/workflows/: checks.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  EVENT_CONTRACT.md  RELIABILITY_MODEL.md  SCENARIOS.md  TESTING.md
src/streamlab/: __init__.py  analytics.py  dashboard.py  main.py  models.py  repository.py  service.py  simulator.py
src/streamlab/static/: overlay.css  overlay.html  overlay.js
tests/: conftest.py
tests/dashboard/: test_dashboard.py
tests/e2e/: test_overlay_vertical.py
tests/integration/: test_analytics.py  test_repository.py  test_websockets.py
tests/scenarios/: test_reconnect_burst.py
tests/unit/: test_health.py  test_models.py  test_simulator.py
