[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-reliability-lab"
version = "0.1.0"
description = "A laboratory for testing real-time event-driven application reliability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
    "pytz>=2024,<2027",
    "streamlit>=1.45,<2",
    "uvicorn>=0.34,<1",
    "websockets>=15,<16",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.5,<3",
    "mypy>=1.14,<2",
    "playwright>=1.52,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[project.scripts]
streamlab-simulate = "streamlab.simulator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not e2e and not scenario'"
markers = [
    "e2e: tests requiring a real browser and network server",
    "scenario: deterministic scenario verification",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
streamlab = ["static/*"]
